--- a/webApp/src/jsMain/resources/onboarding.html
+++ b/webApp/src/jsMain/resources/onboarding.html
@@ -125,8 +125,8 @@
                     <div class="user-profile">
                         <div class="user-avatar">JS</div>
                         <div class="user-info">
-                            <span class="user-name">John Smith</span>
-                            <span class="user-role">Security Analyst</span>
+                            <span class="user-name" data-i18n="SampleUserName">John Smith</span>
+                            <span class="user-role" data-i18n="SampleUserRole">Security Analyst</span>
                         </div>
                         <span class="material-symbols-outlined">expand_more</span>
                     </div>
@@ -181,11 +181,12 @@
                         </div>
 
                         <h1 class="hero-title">
-                            Analysed offline. <br />
-                            <span class="hero-gradient">Your data stays on-device.</span>
+                            <span data-i18n="AnalysedOfflineTitle">Analysed offline.</span> <br />
+                            <span class="hero-gradient" data-i18n="YourDataStaysOnDevice">Your data stays
+                                on-device.</span>
                         </h1>
 
-                        <p class="hero-description">
+                        <p class="hero-description" data-i18n="OnboardingHeroDesc">
                             QR-SHIELD processes every scan using secure on-device analysis.
                             We prioritize explainable security with zero cloud telemetry for image analysis.
                         </p>
@@ -201,8 +202,8 @@
                             <div class="feature-icon blue">
                                 <span class="material-symbols-outlined">security</span>
                             </div>
-                            <h3 class="feature-title">On-Device Analysis</h3>
-                            <p class="feature-description">
+                            <h3 class="feature-title" data-i18n="OnDeviceAnalysis">On-Device Analysis</h3>
+                            <p class="feature-description" data-i18n="OnDeviceAnalysisDesc">
                                 All threat detection runs locally on your device.
                                 No data ever leaves your system.
                             </p>
@@ -216,8 +217,8 @@
                             <div class="feature-icon green">
                                 <span class="material-symbols-outlined">cloud_off</span>
                             </div>
-                            <h3 class="feature-title">No Cloud Logs</h3>
-                            <p class="feature-description">
+                            <h3 class="feature-title" data-i18n="NoCloudLogs">No Cloud Logs</h3>
+                            <p class="feature-description" data-i18n="NoCloudLogsDesc">
                                 We strictly disable outgoing telemetry for scans.
                                 Scan results and image hashes remain local.
                             </p>
@@ -231,8 +232,8 @@
                             <div class="feature-icon purple">
                                 <span class="material-symbols-outlined">storage</span>
                             </div>
-                            <h3 class="feature-title">On-Device DB</h3>
-                            <p class="feature-description">
+                            <h3 class="feature-title" data-i18n="OnDeviceDB">On-Device DB</h3>
+                            <p class="feature-description" data-i18n="OnDeviceDBDesc">
                                 The entire threat signature database is downloaded
                                 to your device for millisecond lookups.
                             </p>
@@ -244,9 +245,9 @@
                         <div class="table-header">
                             <div class="table-title">
                                 <span class="material-symbols-outlined">verified</span>
-                                <h4>Data Lifecycle Verification</h4>
+                                <h4 data-i18n="DataLifecycleVerification">Data Lifecycle Verification</h4>
                             </div>
-                            <span class="audit-badge">Security Audit: PASS</span>
+                            <span class="audit-badge" data-i18n="SecurityAuditPass">Security Audit: PASS</span>
                         </div>
 
                         <div class="table-container">
