--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -120,8 +120,8 @@
                 <div class="user-profile">
                     <div class="user-avatar">JS</div>
                     <div class="user-info">
-                        <span class="user-name">John Smith</span>
-                        <span class="user-role">Security Analyst</span>
+                        <span class="user-name" data-i18n="SampleUserName">John Smith</span>
+                        <span class="user-role" data-i18n="SampleUserRole">Security Analyst</span>
                     </div>
                     <span class="material-symbols-outlined">expand_more</span>
                 </div>
@@ -286,7 +286,7 @@
                         <!-- Recent Scans Card -->
                         <div class="stats-card recent-scans-card">
                             <div class="stats-header">
-                                <h3 class="stats-title" data-i18n="Recent Scans">Recent Scans</h3>
+                                <h3 class="stats-title" data-i18n="RecentScans">Recent Scans</h3>
                                 <button class="view-all-btn" id="viewAllBtn" data-i18n="ViewAll">View All</button>
                             </div>
                             <div class="scans-list" id="scansList">
@@ -351,7 +351,7 @@
                 <div class="url-input-group">
                     <span class="material-symbols-outlined input-icon">link</span>
                     <input type="url" id="urlInputField" class="url-input" placeholder="https://example.com"
-                        autocomplete="off" spellcheck="false" />
+                        data-i18n-placeholder="UrlExamplePlaceholder" autocomplete="off" spellcheck="false" />
                 </div>
                 <button class="btn-analyze" id="analyzeUrlBtn">
                     <span class="material-symbols-outlined">search</span>
@@ -364,7 +364,7 @@
     <!-- Toast Notification -->
     <div class="toast hidden" id="toast">
         <span class="material-symbols-outlined toast-icon">check_circle</span>
-        <span class="toast-message" id="toastMessage">Success!</span>
+        <span class="toast-message" id="toastMessage" data-i18n="Success">Success!</span>
     </div>
 
     <!-- Platform Bridge (Crypto, Clipboard, etc.) -->
